--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "patrickeaton/flatline",
     "description": "A command line tool to flatten and edit existing dynamic sites",
-	 "bin": ["flatline"]
+	 "bin": ["flatline"],
     "require": {
         "php": ">=5.4.0"
     }
